add hover on navlinks

--- a/index.html
+++ b/index.html
@@ -51,23 +51,23 @@ An ecosystem of unique yield strategies that help you earn yield, amplify, and s
                 <div class="d-flex align-items-center gap-between-navlinks-button">
                     <ul class="d-lg-flex align-items-center gap-4 mb-0 ps-0 mobile-view left-minus-100 d-none">
                         <li class="list-unstyled">
-                            <a href="#" class="ff-raleway text-white text-decoration-none fw-medium fs-6">About</a>
+                            <a href="#" class="ff-raleway text-white text-decoration-none fw-medium fs-6 position-relative navlinks">About</a>
                         </li>
                         <li class="list-unstyled">
-                            <a href="#" class="ff-raleway text-white text-decoration-none fw-medium fs-6">IBO Event</a>
+                            <a href="#" class="ff-raleway text-white text-decoration-none fw-medium fs-6 position-relative navlinks">IBO Event</a>
                         </li>
                         <li class="list-unstyled">
-                            <a href="#" class="ff-raleway text-white text-decoration-none fw-medium fs-6">EEFI
+                            <a href="#" class="ff-raleway text-white text-decoration-none fw-medium fs-6 position-relative navlinks">EEFI
                                 Tokenomics</a>
                         </li>
                         <li class="list-unstyled">
-                            <a href="#" class="ff-raleway text-white text-decoration-none fw-medium fs-6">Team</a>
+                            <a href="#" class="ff-raleway text-white text-decoration-none fw-medium fs-6 position-relative navlinks">Team</a>
                         </li>
                         <li class="list-unstyled">
-                            <a href="#" class="ff-raleway text-white text-decoration-none fw-medium fs-6">Partners</a>
+                            <a href="#" class="ff-raleway text-white text-decoration-none fw-medium fs-6 position-relative navlinks">Partners</a>
                         </li>
                         <li class="list-unstyled">
-                            <a href="#" class="ff-raleway text-white text-decoration-none fw-medium fs-6">Roadmap</a>
+                            <a href="#" class="ff-raleway text-white text-decoration-none fw-medium fs-6 position-relative navlinks">Roadmap</a>
                         </li>
                         <li class="dropdown list-unstyled">
                             <a href="#"
