--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ An ecosystem of unique yield strategies that help you earn yield, amplify, and s
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body class="overflow_hidden">
     <!-- =========================================        HEADER       ================================================== -->
     <header class="header-bg overflow-hidden position-relative">
@@ -51,23 +52,30 @@ An ecosystem of unique yield strategies that help you earn yield, amplify, and s
                 <div class="d-flex align-items-center gap-between-navlinks-button">
                     <ul class="d-lg-flex align-items-center gap-4 mb-0 ps-0 mobile-view left-minus-100">
                         <li class="list-unstyled">
-                            <a href="#" class="ff-raleway text-white text-decoration-none fw-medium fs-6 position-relative navlinks">About</a>
+                            <a href="#"
+                                class="ff-raleway text-white text-decoration-none fw-medium fs-6 position-relative navlinks">About</a>
                         </li>
                         <li class="list-unstyled">
-                            <a href="#" class="ff-raleway text-white text-decoration-none fw-medium fs-6 position-relative navlinks">IBO Event</a>
+                            <a href="#"
+                                class="ff-raleway text-white text-decoration-none fw-medium fs-6 position-relative navlinks">IBO
+                                Event</a>
                         </li>
                         <li class="list-unstyled">
-                            <a href="#" class="ff-raleway text-white text-decoration-none fw-medium fs-6 position-relative navlinks">EEFI
+                            <a href="#"
+                                class="ff-raleway text-white text-decoration-none fw-medium fs-6 position-relative navlinks">EEFI
                                 Tokenomics</a>
                         </li>
                         <li class="list-unstyled">
-                            <a href="#" class="ff-raleway text-white text-decoration-none fw-medium fs-6 position-relative navlinks">Team</a>
+                            <a href="#"
+                                class="ff-raleway text-white text-decoration-none fw-medium fs-6 position-relative navlinks">Team</a>
                         </li>
                         <li class="list-unstyled">
-                            <a href="#" class="ff-raleway text-white text-decoration-none fw-medium fs-6 position-relative navlinks">Partners</a>
+                            <a href="#"
+                                class="ff-raleway text-white text-decoration-none fw-medium fs-6 position-relative navlinks">Partners</a>
                         </li>
                         <li class="list-unstyled">
-                            <a href="#" class="ff-raleway text-white text-decoration-none fw-medium fs-6 position-relative navlinks">Roadmap</a>
+                            <a href="#"
+                                class="ff-raleway text-white text-decoration-none fw-medium fs-6 position-relative navlinks">Roadmap</a>
                         </li>
                         <li class="dropdown list-unstyled">
                             <a href="#"
@@ -151,27 +159,27 @@ An ecosystem of unique yield strategies that help you earn yield, amplify, and s
 
     </div>
     <script>
-   document.getElementById("menuIcon").addEventListener("click", function () {
-    this.classList.toggle("crossline1");
-    document.querySelector(".mobile-view").classList.toggle("left-minus-100");
-    document.querySelector(".mobile-view").classList.toggle("left-0");
-    
-    if (document.querySelector(".mobile-view").classList.contains("left-0")) {
-        document.body.classList.add("overflow_hidden");
-    } else {
-        document.body.classList.remove("overflow_hidden");
-    }
-});
+        document.getElementById("menuIcon").addEventListener("click", function () {
+            this.classList.toggle("crossline1");
+            document.querySelector(".mobile-view").classList.toggle("left-minus-100");
+            document.querySelector(".mobile-view").classList.toggle("left-0");
 
-document.querySelectorAll(".mobile-view li").forEach(function (li) {
-    li.addEventListener("click", function () {
-        document.getElementById("menuIcon").classList.toggle("crossline1");
-        document.querySelector(".mobile-view").classList.toggle("left-minus-100");
-        document.querySelector(".mobile-view").classList.toggle("left-0");
-        
-        document.body.classList.remove("overflow_hidden");
-    });
-});
+            if (document.querySelector(".mobile-view").classList.contains("left-0")) {
+                document.body.classList.add("overflow_hidden");
+            } else {
+                document.body.classList.remove("overflow_hidden");
+            }
+        });
+
+        document.querySelectorAll(".mobile-view li").forEach(function (li) {
+            li.addEventListener("click", function () {
+                document.getElementById("menuIcon").classList.toggle("crossline1");
+                document.querySelector(".mobile-view").classList.toggle("left-minus-100");
+                document.querySelector(".mobile-view").classList.toggle("left-0");
+
+                document.body.classList.remove("overflow_hidden");
+            });
+        });
     </script>
     <script src="./assets/js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
